Реализована первая версия консольного интерфейса

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,6 @@
 Добавить возможность конфигурирования строки подключения к БД
-Реализовать CLI
+Улучшить обработку ошибок
+Исправить внедрение зависимостей
+Реализовать корректное открытие scope
+Реализовать корректное открытие транзакций
+Добавить логирование
