--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,3 @@
-Добавить возможность конфигурирования строки подключения к БД
-Улучшить обработку ошибок
-Исправить внедрение зависимостей
-Реализовать корректное открытие scope
-Реализовать корректное открытие транзакций
-Добавить логирование
+Реализовать GUI
+Реализовать импорт/экспорт данных
+Разработать мобильную версию
