Добавлены новые пункты в TODO-список

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
 Реализовать GUI
 Реализовать импорт/экспорт данных
 Разработать мобильную версию
+Реализовать копирование в буфер обмена
+Реализовать таблицу с логинами
+Исправить баг на старте консольного интерфейса
